--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Shop Way</title>
+    <title>Shop Way</title>
     <link rel="icon" href="./images/Shop way.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./login.css">
     <link rel="stylesheet" href="./index.css">
+    <script src="https://kit.fontawesome.com/c56a316195.js" crossorigin="anonymous"></script>
+    <style>
+        *{
+            /* border: 1px solid; */
+        }
+        body{
+            background-color: rgb(177, 177, 177);
+        }
+        .box1{
+          margin-top: 10%;
+        }
+        .head{
+          color: black;
+          font-size: 80px;
+          margin-bottom: 8%;
+        }
+.one{
+    background-color: red;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 20px;
+    width: 30%;
+    /* vertical-align: middle; */
+    /* margin-top: -5px; */
+}
+.fa-google-pay{
+    color: #000000;
+    margin-left: 1%;
+    font-size: 30px;
+    /* margin-top: 5px; */
+}
+.put{
+    width: 80% !important;
+}
+@media screen and (max-width:768px) {
+    .adjuct{
+        margin-top: -5%;
+    }
+    .one{
+      width: 100%;
+    }
+    .head{
+        font-size: 40px;
+        /* margin-top: 10% !important; */
+    }
+    .put{
+        width: 100% !important;
+    }
+}
+@media screen and (max-width:769px) {
+    .adjuct{
+        margin-top: 5%;
+    }
+}
+    </style>
 </head>
 <body>
-    <!-- navebar section  -->
+    <!-- nav bar  -->
     <section class="sec1">
       <nav class="navbar navbar-expand-lg navbar-light fixed-top">
           <div class="container-fluid">
@@ -54,33 +108,36 @@
           </div>
         </nav>
   </section>
-    <!-- login section  -->
-  <section class="login">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-            <form class="login-form">
-                <h1>Shop Way</h1>
-                <label for="name" class="lab">Name </label>
-                <input type="text" required placeholder="Enter your name" class="form-control put" id="name">
-                <label for="email" class="lab">Email </label>
-                <input type="email" required placeholder="Enter your email" class="form-control put" id="email">
-                <label for="password" class="lab">Password </label>
-                <input type="password" required placeholder="Enter your password" class="form-control put" id="password">
-                <label for="" class="box"><input type="checkbox" required >
-                    I accepct Terms and condetions</label>
-                <button>Login</button>
-                <p class="account">Dont have an account ? <a href="./signup.html">Signup</a></p>
-            </form>
+    <section>
+        <div class="container box1">
+          <h1 class="head text-center">Content Us</h1>
+          <div class="row">
+            <div class="col-12 col-md-7 order-2 order-md-1 adjust">
+              <!-- form  -->
+              <form action="#">
+                <input type="text" class="form-control put" id="inputPassword" placeholder="Eg. name" ><br>
+                <input type="email" class="form-control put" id="inputdate" placeholder="Eg. example@gmail.com" ><br>
+                <input type="text" class="form-control put" id="inputdate" placeholder="Eg. 1234567890" ><br>
+                <input type="text" class="form-control put" id="inputPassword" placeholder=" Write your issue" ><br>
+                <!-- <input type="number" class="form-control put" id="inputPassword" placeholder="eg.999$" ><br> -->
+                <button class="btn one">Contact us <i class="fa-solid fa-phone"></i></button>
+              </form>
+            </div>
+            <div class="col-12 col-md-5 order-1 order-md-2" style="margin-top: -3%; margin-bottom: 3%;">
+              <img src="./images/Shop way.png" alt="Offer" width="70%">
+            </div>
+            <div class="col-12 col-md-5 order-3 order-md-3" style="margin-top: 3%;">
+              <img src="./images/Shop Way.jpg" alt="Contact" width="100%" style="margin-top: 2%;">
+            </div>
+          </div>
         </div>
-        </div>
-      </div>
-  </section>
+      </section>
+
     <!-- <footer>
-      <div class="end">
-          <p>&copy; 2024 My Website. All rights reserved.</p>
-      </div>
-  </footer> -->
+        <div class="container">
+            <p>&copy; 2024 My Website. All rights reserved.</p>
+        </div>
+    </footer> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
