--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Login Shop Way</title>
     <link rel="icon" href="./images/Shop way.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./signup.css">
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -55,27 +55,25 @@
         </nav>
   </section>
     <!-- login section  -->
-  <section class="login">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-            <form class="login-form">
-                <h1>Shop Way</h1>
-                <label for="name" class="lab">Name </label>
-                <input type="text" required placeholder="Enter your name" class="form-control put" id="name">
-                <label for="email" class="lab">Email </label>
-                <input type="email" required placeholder="Enter your email" class="form-control put" id="email">
-                <label for="password" class="lab">Password </label>
-                <input type="password" required placeholder="Enter your password" class="form-control put" id="password">
-                <label for="" class="box"><input type="checkbox" required >
-                    I accepct Terms and condetions</label>
-                <button>Login</button>
-                <p class="account">Dont have an account ? <a href="./signup.html">Signup</a></p>
-            </form>
-        </div>
-        </div>
-      </div>
-  </section>
+    <section class="login">
+        <form class="login-form">
+            <h1>Shop Way</h1>
+            <label for="name" class="names">Name </label>
+            <input type="text" required placeholder="Enter your name" class="form-control put" id="name">
+            <label for="email" class="names">Email </label>
+            <input type="email" required placeholder="Enter your email" class="form-control put" id="email">
+            <label for="date" class="names">Date of birth</label>
+            <input type="date" required class="form-control put" id="date">
+            <label for="password" class="names">Password </label>
+            <input type="password" required placeholder="Enter your password" class="form-control put" id="password">
+            <label for="password" class="names">Conform Password </label>
+            <input type="password" required placeholder="Re-enter your password" class="form-control put" id="password">
+            <label for="box" class="box"><input type="checkbox" required id="box">
+                I accepct Terms and condetions</label>
+            <button>Submit</button>
+            <p class="account">Alrady have an account ? <a href="./login.html">Login</a></p>
+        </form>
+    </section>
     <!-- <footer>
       <div class="end">
           <p>&copy; 2024 My Website. All rights reserved.</p>
