--- a/more.html
+++ b/more.html
@@ -38,7 +38,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" href="home.html">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                   </li>
                   
                   <li class="nav-item dropdown">
@@ -73,6 +73,12 @@
     </section>
     <h1 class="text-center m-5">More products are avilable soon <br> Continue your shopping <br><br><i class="fa-solid fa-cart-plus"></i></h1>
 
+
+    <footer>
+      <div class="end">
+          <p>&copy; 2024 My Website. All rights reserved.</p>
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
