changes commit message

--- a/shits.html
+++ b/shits.html
@@ -26,6 +26,9 @@
             color: red;
             /* text-decoration: underline; */
         }
+        .cart{
+            margin-bottom: 3%;
+        }
     </style>
 </head>
 <body>
@@ -79,101 +82,121 @@
                     <img src="./products/1.jpg" alt="1" class="p-3">
                      <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹350</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-19 m-3" >
                     <img src="./products/2.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹350</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-12 m-3" >
                     <img src="./products/3.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹400</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-9 m-3" >
                     <img src="./products/4.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹380</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-3 m-3" >
                     <img src="./products/5.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹370</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-15 m-3" >
                     <img src="./products/6.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹420</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-8 m-3" >
                     <img src="./products/7.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹380</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-4 m-3" >
                     <img src="./products/8.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
                     <h6 class="text-center price">₹390</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-16 m-3" >
                     <img src="./products/9.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
                     <h6 class="text-center price">₹333</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-10 m-3" >
                     <img src="./products/10.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
                     <h6 class="text-center price">₹319</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-1 m-3" >
                     <img src="./products/11.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
                     <h6 class="text-center price">₹349</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-7 m-3" >
                     <img src="./products/12.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
                     <h6 class="text-center price">₹346</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-11 m-3" >
                     <img src="./products/13.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
                     <h6 class="text-center price">₹450</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-6 m-3" >
                     <img src="./products/14.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
                     <h6 class="text-center price">₹479</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-13 m-3" >
                     <img src="./products/15.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
                     <h6 class="text-center price">₹465</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-20 m-3" >
                     <img src="./products/16.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
                     <h6 class="text-center price">₹456</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-10 m-3" >
                     <img src="./products/17.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center"> Cotton Shirts </p></a>
                     <h6 class="text-center price">₹472</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-18 m-3" >
                     <img src="./products/18.jpg" alt="1" class="p-3">
                     <a href="#" class="title"><p class="text-center"> Cotton Shirts </p></a>
                     <h6 class="text-center price">₹486</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-14 m-3" >
                     <img src="./products/19.jpg" alt="1" class="p-3">
                     <a href="#" class="title"> <p class="text-center">Cotton Shirts </p></a>
                     <h6 class="text-center price">₹479</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-5 m-3" >
                     <img src="./products/20.jpg" alt="1" class="p-3">
                     <a href="#" class="title"> <p class="text-center">Cotton Shirts </p></a>
                     <h6 class="text-center price">₹499</h6>
+                    <a href="#"><button class="btn btn-secondary cart ">Add to cart</button></a>
                 </div>
 
             </div>
