--- a/t-Shirts.html
+++ b/t-Shirts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shirts @ Shop-way</title>
+    <title>T-Shirts @ Shop-way</title>
     <link rel="icon" href="./images/Shop way.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./index.css">
@@ -25,6 +25,10 @@
         .title:hover{
             color: red;
             /* text-decoration: underline; */
+        }
+        .image{
+            width: auto;
+            height: 70%;
         }
     </style>
 </head>
@@ -76,104 +80,124 @@
         <div class="container mt-3">
             <div class="row">
                 <div class="col-12 col-md-4 col-lg-2 card order-2 m-3" >
-                    <img src="./products/1.jpg" alt="1" class="p-3">
-                     <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
-                    <h6 class="text-center price">₹350</h6>
+                    <img src="./products/T-shirts/2.jpg" alt="1" class="image p-3">
+                     <a href="#" class="title"><p class="text-center">Men's Cotton Polo Collar Tshirt</p></a>
+                    <h6 class="text-center price">₹650</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-19 m-3" >
-                    <img src="./products/2.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
-                    <h6 class="text-center price">₹350</h6>
+                    <img src="./products/T-shirts/2.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
+                    <h6 class="text-center price">₹359</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-12 m-3" >
-                    <img src="./products/3.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
-                    <h6 class="text-center price">₹400</h6>
+                    <img src="./products/T-shirts/3.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Polyester Stylish T-shirt</p></a>
+                    <h6 class="text-center price">₹279</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-9 m-3" >
-                    <img src="./products/4.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
-                    <h6 class="text-center price">₹380</h6>
+                    <img src="./products/T-shirts/4.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Cotton Polo Collar Tshirt</p></a>
+                    <h6 class="text-center price">₹687</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-3 m-3" >
-                    <img src="./products/5.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
-                    <h6 class="text-center price">₹370</h6>
+                    <img src="./products/T-shirts/5.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Polyester Stylish T-shirt</p></a>
+                    <h6 class="text-center price">₹379</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-15 m-3" >
-                    <img src="./products/6.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
-                    <h6 class="text-center price">₹420</h6>
+                    <img src="./products/T-shirts/6.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
+                    <h6 class="text-center price">₹399</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-8 m-3" >
-                    <img src="./products/7.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
-                    <h6 class="text-center price">₹380</h6>
+                    <img src="./products/T-shirts/7.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
+                    <h6 class="text-center price">₹379</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-4 m-3" >
-                    <img src="./products/8.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">MENS PRINTED LYCRA SHIRTS</p></a>
+                    <img src="./products/T-shirts/8.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2)</p></a>
                     <h6 class="text-center price">₹390</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-16 m-3" >
-                    <img src="./products/9.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
+                    <img src="./products/T-shirts/9.jpg" alt="1" class="image p-3">
+                    <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2)</p></a>
                     <h6 class="text-center price">₹333</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-10 m-3" >
-                    <img src="./products/10.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
-                    <h6 class="text-center price">₹319</h6>
+                    <img src="./products/T-shirts/10.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Cotton Polo Collar Tshirt</p></a>
+                    <h6 class="text-center price">₹659</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-1 m-3" >
-                    <img src="./products/11.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
+                    <img src="./products/T-shirts/11.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
                     <h6 class="text-center price">₹349</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-7 m-3" >
-                    <img src="./products/12.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Men Casual Shirt</p></a>
-                    <h6 class="text-center price">₹346</h6>
+                    <img src="./products/T-shirts/12.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
+                    <h6 class="text-center price">₹318</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-11 m-3" >
-                    <img src="./products/13.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
-                    <h6 class="text-center price">₹450</h6>
+                    <img src="./products/T-shirts/13.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt </p></a>
+                    <h6 class="text-center price">₹378</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-6 m-3" >
-                    <img src="./products/14.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
+                    <img src="./products/T-shirts/14.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2) </p></a>
                     <h6 class="text-center price">₹479</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-13 m-3" >
-                    <img src="./products/15.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
-                    <h6 class="text-center price">₹465</h6>
+                    <img src="./products/T-shirts/15.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center">Polyester Stylish T-shirt </p></a>
+                    <h6 class="text-center price">₹249</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-20 m-3" >
-                    <img src="./products/16.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center">Cotton Shirts </p></a>
+                    <img src="./products/T-shirts/16.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2) </p></a>
                     <h6 class="text-center price">₹456</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-10 m-3" >
-                    <img src="./products/17.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center"> Cotton Shirts </p></a>
-                    <h6 class="text-center price">₹472</h6>
+                    <img src="./products/T-shirts/17.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center"> Polyester Stylish T-shirt </p></a>
+                    <h6 class="text-center price">₹229</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-18 m-3" >
-                    <img src="./products/18.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"><p class="text-center"> Cotton Shirts </p></a>
-                    <h6 class="text-center price">₹486</h6>
+                    <img src="./products/T-shirts/18.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"><p class="text-center"> Polo Cotton T-Shirts </p></a>
+                    <h6 class="text-center price">₹389</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-14 m-3" >
-                    <img src="./products/19.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"> <p class="text-center">Cotton Shirts </p></a>
-                    <h6 class="text-center price">₹479</h6>
+                    <img src="./products/T-shirts/19.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"> <p class="text-center">Polo Cotton T-Shirts </p></a>
+                    <h6 class="text-center price">₹375</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
                 <div class="col-12 col-md-4 col-lg-2 card order-5 m-3" >
-                    <img src="./products/20.jpg" alt="1" class="p-3">
-                    <a href="#" class="title"> <p class="text-center">Cotton Shirts </p></a>
-                    <h6 class="text-center price">₹499</h6>
+                    <img src="./products/T-shirts/20.jpg" alt="1" class=image "p-3">
+                    <a href="#" class="title"> <p class="text-center">Polo Cotton T-Shirts </p></a>
+                    <h6 class="text-center price">₹333</h6>
+                    <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
 
             </div>
