--- a/signup.html
+++ b/signup.html
@@ -11,49 +11,48 @@
 </head>
 <body>
     <!-- navebar section  -->
-    <section class="sec1">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="home.html" style="width: 4% ;"><img src="./images/Shop way.png" alt="Logo" width="100%"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Products
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
-                    <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
-                    <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
-                    <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
-                    <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
-                    <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="./more.html">More products</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link"  href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./login.html">Login</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-        </nav>
-  </section>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container-fluid">
+          <img src="./images/Shop way.png" alt="Logo" width="50px">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./cart.html">Cart</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Products
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
+                  <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
+                  <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
+                  <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
+                  <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
+                  <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="./more.html">More products</a></li>
+                </ul>
+              </li>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="#">Menu</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link " href="./contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="./log.html" tabindex="-1" aria-disabled="true">Login</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <!-- login section  -->
     <section class="login">
         <form class="login-form">
@@ -71,7 +70,7 @@
             <label for="box" class="box"><input type="checkbox" required id="box">
                 I accepct Terms and condetions</label>
             <button>Submit</button>
-            <p class="account">Alrady have an account ? <a href="./login.html">Login</a></p>
+            <p class="account">Alrady have an account ? <a href="./log.html">Login</a></p>
         </form>
     </section>
     <!-- <footer>
