--- a/cart.html
+++ b/cart.html
@@ -3,33 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop way</title>
-    <link rel="icon" href="./images/Shop way.png">
+    <title>Your cart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/c56a316195.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./index.css">
+    <link rel="icon" href="./images/Shop way.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
-        body{
-            background-color: rgb(200, 200, 200);
+        .sec{
+            margin-top: 8%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
-        .sec1{
-            margin-top: 10%;
+        .btn{
+            margin-top: 40%;
         }
         h1{
-            color: red;
-            font-size: 100px;
-            font-family: "Dancing Script", cursive;
+            font-family: "Playfair Display", serif;
+            font-weight: bold;
+            color: rgb(255, 0, 0);
+            text-shadow: 1px 1px 1px rgb(113, 111, 111);
         }
-        .fa-solid{
-            color: blue;
-            font-size: 150px;
+        #fish{
+            margin-top: 8%;
         }
+        @media All and  (min-width:300px) and (max-width:992px){
+        .sec{
+          margin-top: 20%;
+          display: flex;
+          flex-direction: column;
+          /* justify-content: end; */
+          /* align-items: end; */
+        }
+        #fish{
+            width: 50%;
+            margin-top: 25%;
+        }
+      }
     </style>
 </head>
 <body>
-    <section class="sec1">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
             <img src="./images/Shop way.png" alt="Logo" width="50px">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +55,7 @@
           <div class="collapse navbar-collapse text-center" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./cart.html">Cart</a>
@@ -71,15 +88,16 @@
           </div>
         </div>
       </nav>
-    </section>
-    <h1 class="text-center m-5">More products are avilable soon <br> Continue your shopping <br><br><i class="fa-solid fa-cart-plus"></i></h1>
+    <!-- CART  -->
+     <section class="sec">
+        <h1 class="text-center ">
+           HEAR &nbsp;DONT &nbsp;HAVE &nbsp;ANY &nbsp;ITEMS 
+         </h1>
+         <a href="./index.html"><button class="btn btn-primary">Shop Now</button></a>
+         <img src="./images/fishing.png" alt="Fishing" id="fish">
+     </section>
 
 
-    <footer>
-      <div class="end">
-          <p>&copy; 2024 My Website. All rights reserved.</p>
-      </div>
-  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
