--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             background-color: rgb(177, 177, 177);
         }
         .box1{
-          margin-top: 10%;
+          margin-top: 6%;
         }
         .head{
           color: black;
@@ -61,56 +61,61 @@
         margin-top: 5%;
     }
 }
+@media Screen and  (min-width:300px) and (max-width:992px){
+        .box1{
+          margin-top: 18%;
+        }
+      }
     </style>
 </head>
 <body>
     <!-- nav bar  -->
-    <section class="sec1">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="home.html" style="width: 4% ;"><img src="./images/Shop way.png" alt="Logo" width="100%"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" href="index.html">Home</a>
-                </li>
-                
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Products
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
-                    <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
-                    <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
-                    <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
-                    <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
-                    <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="./more.html">More products</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link"  href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./login.html">Login</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-        </nav>
-  </section>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container-fluid">
+          <img src="./images/Shop way.png" alt="Logo" width="50px">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./cart.html">Cart</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Products
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
+                  <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
+                  <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
+                  <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
+                  <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
+                  <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="./more.html">More products</a></li>
+                </ul>
+              </li>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="#">Menu</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link " href="./contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="./log.html" tabindex="-1" aria-disabled="true">Login</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  <!-- Contact us  -->
     <section>
         <div class="container box1">
-          <h1 class="head text-center">Content Us</h1>
+          <h1 class="head text-center">Contact Us</h1>
           <div class="row">
             <div class="col-12 col-md-7 order-2 order-md-1 adjust">
               <!-- form  -->
@@ -124,7 +129,7 @@
               </form>
             </div>
             <div class="col-12 col-md-5 order-1 order-md-2" style="margin-top: -3%; margin-bottom: 3%;">
-              <img src="./images/Shop way.png" alt="Offer" width="70%">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61263.80511727938!2d80.393318802316!3d16.323566604512312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4a755cb1787785%3A0x9f7999dd90f1e694!2sGuntur%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1717930230990!5m2!1sen!2sin"  width="400" height="300" border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class=""></iframe>
             </div>
             <div class="col-12 col-md-5 order-3 order-md-3" style="margin-top: 3%;">
               <img src="./images/Shop Way.jpg" alt="Contact" width="100%" style="margin-top: 2%;">
