--- a/index.html
+++ b/index.html
@@ -13,65 +13,61 @@
     <link rel="stylesheet" href="./home.css">
 </head>
 <body>
-  <!-- bannar  -->
-  <section class="sec">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h1 class="well text-end">Welcome to <br><span>Shop Way</span></h1>
-        </div>
+  <!-- navebar  -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <div class="container-fluid">
+        <img src="./images/Shop way.png" alt="Logo" width="50px">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse text-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./cart.html">Cart</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Products
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
+                <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
+                <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
+                <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
+                <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
+                <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="./more.html">More products</a></li>
+              </ul>
+            </li>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#">Menu</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link " href="./contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="./log.html" tabindex="-1" aria-disabled="true">Login</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
+  <!-- bannar  -->
+    <section class="banner bg-primary">
+      <div class="container text-end">
+          <h1>Welcome Shop Way</h1>
+          <p>Your favorite place for Shopping </p>
+      </div>
   </section>
-  <!-- navebar  -->
-    <section class="sec1">
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html" style="width: 4% ;"><img src="./images/Shop way.png" alt="Logo" width="100%"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
-                  </li>
-                  
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Products
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
-                      <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
-                      <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
-                      <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
-                      <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
-                      <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="./more.html">More products</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link"  href="contact.html">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./login.html">Login</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-    </section>
-    <!-- section 2  imagires-->
+  <!-- section 2  imagires -->
     <section >
-        <div class="container">
-            <div class="row d-flex flex-row justify-content-center flex-sm-wrap">
-                <div class="col-12 w-50 ">
+        <div class="container-fluid">
+            <div class="row d-flex d-row justify-content-center">
+                <div class="col-md-4">
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
@@ -100,67 +96,75 @@
             </div>
         </div>
     </section>
-    <!-- section 3  cards 1-->
+ <!-- section 3  cards 1 -->
     <section>
       <h1 class="head1 text-center" style="margin-top: 2%;">Mens wear</h1>
         <div class="container">
             <div class="row ">
-                <div class="col-12 box">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-md-4 box">
+                    <div class="card mb-4 shadow-sm">
                         <img src="./images/1.jpg" class="card-img-top" alt="Shirts" width="50%">
                         <div class="card-body">
                           <h5 class="card-title text-center">Shirts</h5>
                           <a href="./shits.html" class="btn btn-primary">Shop more</a>
                         </div>
                       </div>
-                      <div class="card" style="width: 18rem;">
-                        <img src="./images/2.jpg" class="card-img-top" alt="T-Shirts">
+                      </div>
+                      <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                        <img src="./images/2.jpg" class="card-img-top" alt="T-Shirts" width="50%">
                         <div class="card-body">
                           <h5 class="card-title text-center">T-Shirts</h5>
                           <a href="./t-Shirts.html" class="btn btn-primary">Shop more</a>
                         </div>
                       </div>
-                      <div class="card" style="width: 18rem;">
-                        <img src="./images/3.jpg" class="card-img-top" alt="Trackpants">
+                    </div>
+                    <div class="col-md-4">
+                      <div class="card mb-4 shadow-sm">
+                        <img src="./images/3.jpg" class="card-img-top" alt="Trackpants" width="50%">
                         <div class="card-body">
                           <h5 class="card-title text-center">Trackpants</h5>
                           <a href="./trackpants.html" class="btn btn-primary">Shop more</a>
                         </div>
                       </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
-    <!-- section 4 -->
+  <!-- section 4  card 2-->
     <section>
       <h1 class="head1 text-center" style="margin-top: 2%;">Kurti & Kurti sets</h1>
         <div class="container">
             <div class="row ">
-                <div class="col-12 box">
-                    <div class="card" style="width: 18rem;">
-                        <img src="./images/4.jpg" class="card-img-top" alt="Anarkalis" width="50%" height="">
+                <div class="col-md-4 box">
+                    <div class="card mb-4 shadow-sm">
+                        <img src="./images/4.jpg" class="card-img-top" alt="Anarkalis" width="50%">
                         <div class="card-body">
                           <h5 class="card-title text-center">Anarkalis</h5>
                           <a href="./anarkalis.html" class="btn btn-primary">Shop more</a>
                         </div>
                       </div>
-                      <div class="card" style="width: 18rem;">
-                        <img src="./images/5.jpg" class="card-img-top" alt="Chikenkari">
+                      </div>
+                      <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                        <img src="./images/5.jpg" class="card-img-top" alt="Chikenkari" width="50%">
                         <div class="card-body">
                           <h5 class="card-title text-center">Chikenkari</h5>
                           <a href="./chikenkari.html" class="btn btn-primary">Shop more</a>
                         </div>
                       </div>
-                      <div class="card" style="width: 18rem;">
-                        <img src="./images/6.jpg" class="card-img-top" alt="Short Kurtis">
+                      </div>
+                      <div class="col-md-4 ">
+                        <div class="card mb-4 shadow-sm">
+                        <img src="./images/6.jpg" class="card-img-top" alt="Short Kurtis" width="50%">
                         <div class="card-body">
                           <h5 class="card-title text-center">Short Kurtis</h5>
                           <a href="./short-Kurtis.html" class="btn btn-primary">Shop more</a>
                         </div>
                       </div>
+                      </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <footer>
