--- a/t-Shirts.html
+++ b/t-Shirts.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./index.css">
     <style>
         .sec1{
-            margin-top: 8%;
+            margin-top: 6%;
         }
         body{
             background: linear-gradient(to left, rgb(194, 194, 194), rgb(184, 109, 109));
@@ -30,170 +30,176 @@
             width: auto;
             height: 70%;
         }
+        @media Screen and  (min-width:300px) and (max-width:992px){
+        .sec1{
+          margin-top: 18%;
+        }
+      }
     </style>
 </head>
 <body>
-    <section class="sec">
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="home.html" style="width: 4% ;"><img src="./images/Shop way.png" alt="Logo" width="100%"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
-                  </li>
-                  
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Products
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
-                      <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
-                      <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
-                      <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
-                      <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
-                      <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="./more.html">More products</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link"  href="contact.html">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./login.html">Login</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-    </section>
+    <!-- navigation bar  -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <div class="container-fluid">
+            <img src="./images/Shop way.png" alt="Logo" width="50px">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse text-center" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./cart.html">Cart</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Products
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="./shits.html">Shirts</a></li>
+                    <li><a class="dropdown-item" href="./t-Shirts.html">T-Shirts</a></li>
+                    <li><a class="dropdown-item" href="./trackpants.html">Trackpants</a></li>
+                    <li><a class="dropdown-item" href="./anarkalis.html">Anarkalis</a></li>
+                    <li><a class="dropdown-item" href="./chikenkari.html">Chikenkari</a></li>
+                    <li><a class="dropdown-item" href="./short-Kurtis.html">Short Kurtis</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="./more.html">More products</a></li>
+                  </ul>
+                </li>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Menu</a>
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link " href="./contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="./log.html" tabindex="-1" aria-disabled="true">Login</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    <!-- Products  -->
     <section class="sec1">
         <div class="container mt-3">
             <div class="row">
-                <div class="col-12 col-md-4 col-lg-2 card order-2 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-2 mb-3" >
                     <img src="./products/T-shirts/2.jpg" alt="1" class="image p-3">
                      <a href="#" class="title"><p class="text-center">Men's Cotton Polo Collar Tshirt</p></a>
                     <h6 class="text-center price">₹650</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-19 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-19 mb-3" >
                     <img src="./products/T-shirts/2.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
                     <h6 class="text-center price">₹359</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-12 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-12 mb-3" >
                     <img src="./products/T-shirts/3.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Polyester Stylish T-shirt</p></a>
                     <h6 class="text-center price">₹279</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-9 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-9 mb-3" >
                     <img src="./products/T-shirts/4.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Men's Cotton Polo Collar Tshirt</p></a>
                     <h6 class="text-center price">₹687</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-3 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-3 mb-3" >
                     <img src="./products/T-shirts/5.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Polyester Stylish T-shirt</p></a>
                     <h6 class="text-center price">₹379</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-15 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-15 mb-3" >
                     <img src="./products/T-shirts/6.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
                     <h6 class="text-center price">₹399</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-8 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-8 mb-3" >
                     <img src="./products/T-shirts/7.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
                     <h6 class="text-center price">₹379</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-4 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-4 mb-3" >
                     <img src="./products/T-shirts/8.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2)</p></a>
                     <h6 class="text-center price">₹390</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-16 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-16 mb-3" >
                     <img src="./products/T-shirts/9.jpg" alt="1" class="image p-3">
                     <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2)</p></a>
                     <h6 class="text-center price">₹333</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-10 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-10 mb-3" >
                     <img src="./products/T-shirts/10.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center">Men's Cotton Polo Collar Tshirt</p></a>
                     <h6 class="text-center price">₹659</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-1 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-1 mb-3" >
                     <img src="./products/T-shirts/11.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
                     <h6 class="text-center price">₹349</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-7 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-7 mb-3" >
                     <img src="./products/T-shirts/12.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt</p></a>
                     <h6 class="text-center price">₹318</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-11 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-11 mb-3" >
                     <img src="./products/T-shirts/13.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center">Men's Round Neck Cotton Tshirt </p></a>
                     <h6 class="text-center price">₹378</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-6 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-6 mb-3" >
                     <img src="./products/T-shirts/14.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2) </p></a>
                     <h6 class="text-center price">₹479</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-13 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-13 mb-3" >
                     <img src="./products/T-shirts/15.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center">Polyester Stylish T-shirt </p></a>
                     <h6 class="text-center price">₹249</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-20 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-20 mb-3" >
                     <img src="./products/T-shirts/16.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center">Polo neck T-shirt (pack of 2) </p></a>
                     <h6 class="text-center price">₹456</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-10 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-10 mb-3" >
                     <img src="./products/T-shirts/17.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center"> Polyester Stylish T-shirt </p></a>
                     <h6 class="text-center price">₹229</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-18 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-18 mb-3" >
                     <img src="./products/T-shirts/18.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"><p class="text-center"> Polo Cotton T-Shirts </p></a>
                     <h6 class="text-center price">₹389</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-14 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-14 mb-3" >
                     <img src="./products/T-shirts/19.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"> <p class="text-center">Polo Cotton T-Shirts </p></a>
                     <h6 class="text-center price">₹375</h6>
                     <a href="#"><button class="btn btn-secondary mb-3 ">Add to cart</button></a>
                 </div>
-                <div class="col-12 col-md-4 col-lg-2 card order-5 m-3" >
+                <div class="col-12 col-md-4 col-lg-2 card order-5 mb-3" >
                     <img src="./products/T-shirts/20.jpg" alt="1" class=image "p-3">
                     <a href="#" class="title"> <p class="text-center">Polo Cotton T-Shirts </p></a>
                     <h6 class="text-center price">₹333</h6>
