changes commit message

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
             /* border: 1px solid; */
         }
         body{
-            background-color: rgb(177, 177, 177);
+            /* background-color: rgb(177, 177, 177); */
+            background: linear-gradient(to right,rgba(220, 9, 9, 0.514),rgba(134, 132, 132, 0.514));
         }
         .box1{
           margin-top: 6%;
@@ -40,6 +41,7 @@
 }
 .put{
     width: 80% !important;
+    margin-bottom: 2%;
 }
 @media screen and (max-width:768px) {
     .adjuct{
@@ -54,6 +56,7 @@
     }
     .put{
         width: 100% !important;
+        /* margin-bottom: 10% !important; */
     }
 }
 @media screen and (max-width:769px) {
@@ -134,7 +137,7 @@
           <div class="row">
             <div class="col-12 col-md-7 order-2 order-md-1 adjust">
               <!-- form  -->
-              <form action="#">
+              <form action="#"">
                 <input type="text" class="form-control put" id="inputPassword" placeholder="Eg. name" ><br>
                 <input type="email" class="form-control put" id="inputdate" placeholder="Eg. example@gmail.com" ><br>
                 <input type="text" class="form-control put" id="inputdate" placeholder="Eg. 1234567890" ><br>
@@ -143,12 +146,12 @@
                 <button class="btn one">Contact us <i class="fa-solid fa-phone"></i></button>
               </form>
             </div>
-            <div class="col-12 col-md-5 order-1 order-md-2" style="margin-top: -3%; margin-bottom: 3%;">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61263.80511727938!2d80.393318802316!3d16.323566604512312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4a755cb1787785%3A0x9f7999dd90f1e694!2sGuntur%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1717930230990!5m2!1sen!2sin"  width="400" height="300" border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class=""></iframe>
+            <div class="col-12 col-md-5 order-1 order-md-2">
+              <img src="./images/Shop Way.jpg" alt="Contact" width="100%" height="80%" class="image">
             </div>
-            <div class="col-12 col-md-5 order-3 order-md-3" style="margin-top: 3%;">
-              <img src="./images/Shop Way.jpg" alt="Contact" width="100%" style="margin-top: 2%;">
-            </div>
+            <!-- <div class="col-12 col-md-5 order-3 order-md-3">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61263.80511727938!2d80.393318802316!3d16.323566604512312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a4a755cb1787785%3A0x9f7999dd90f1e694!2sGuntur%2C%20Andhra%20Pradesh!5e0!3m2!1sen!2sin!4v1718017089202!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div> -->
           </div>
         </div>
       </section>
